# Donzio_truth_engine

./: .gitignore  Dockerfile  EXPLANATION.md  Makefile  README.md  documentation.md  events.jsonl  expected_hash.txt  pyproject.toml  sample_events.jsonl  test_ext_out.txt  test_external.py  test_out.txt  test_output.txt  test_output2.txt  test_runner.py  verify_runner.py
donizo_engine/: __init__.py  __main__.py  cli.py  engine.py  generate_events.py  models.py  state.py
templates/: index.html
tests/: test_determinism.py  test_e2e.py  test_engine.py  test_properties.py
